<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nhannt.foody.screen.addplace.AddPlaceActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_foody">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_new_place"
            android:textColor="@color/color_white"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_place_name"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/max_price"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/min_price"/>
            </android.support.design.widget.TextInputLayout>


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/order_delivery"/>

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no_order_delivery"/>
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_open_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/open_time"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/btn_close_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/close_time"
                    android:textAllCaps="false"/>
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">
                <VideoView
                    android:id="@+id/add_video_dish"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:id="@+id/add_video_dish_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_themvideo"/>
            </FrameLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/util"
                android:textSize="18sp"
                android:textStyle="bold"/>


            <HorizontalScrollView
                android:id="@+id/hsv_utils"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/ll_utils"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/branch"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/ll_branch_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/area_str"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/spinner_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

            </Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/image"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/img_add_place_1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_themhinhanh"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_add_place_2"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_mini_themhinh"/>

                <ImageView
                    android:id="@+id/img_add_place_3"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_mini_themhinh"/>

                <ImageView
                    android:id="@+id/img_add_place_4"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_mini_themhinh"/>

                <ImageView
                    android:id="@+id/img_add_place_5"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_mini_themhinh"/>

                <ImageView
                    android:id="@+id/img_add_place_6"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_mini_themhinh"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/menu"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/ll_menu_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_radius_5dp"
                android:text="@string/save_place"
                android:textAllCaps="false"
                android:textColor="@color/color_white"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</FrameLayout>
