<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_dish_item"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:src="@drawable/img_mini_themhinh"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_dish_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dish_title"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_dish_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/price"/>

                <Spinner
                    android:id="@+id/spinner_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"></Spinner>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_add_dish_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/add_menu"
            android:textAllCaps="false"
            android:textColor="@color/color_white"/>
        <Button
            android:id="@+id/btn_remove_dish_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:visibility="gone"
            android:textColor="@color/color_white"/>
    </FrameLayout>



</LinearLayout>