<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_2"
    tools:context="nhannt.foody.screen.resetpassword.ResetPasswordActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_bg_login"
        android:orientation="vertical"
        android:paddingTop="@dimen/register_padding_top"
        android:paddingLeft="@dimen/login_padding"
        android:paddingRight="@dimen/login_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/forgot_pass_text_margin"
            android:textSize="@dimen/sp_30"
            android:textColor="@color/color_white"
            android:text="@string/forgot_pass_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/forgot_pass_text_margin"
            android:textColor="@color/color_white"
            android:text="@string/reset_pass"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/edt_email_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_edt_margin_top"
            android:backgroundTint="@color/color_white"
            android:drawableLeft="@drawable/ic_email_white_24dp"
            android:drawablePadding="@dimen/login_drawable_padding"
            android:hint="@string/email_login"
            android:inputType="textEmailAddress"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_white"/>

        <Button
            android:id="@+id/btn_send_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/btn_login_margin_top"
            android:background="@drawable/btn_login"
            android:paddingLeft="@dimen/btn_login_padding_left_right"
            android:paddingRight="@dimen/btn_login_padding_left_right"
            android:text="@string/forgot_pass_content"
            android:textAllCaps="false"
            android:textColor="@color/color_white"/>
        <TextView
            android:id="@+id/tv_register"
            android:layout_marginTop="@dimen/btn_login_margin_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/color_white"
            android:text="@string/not_member"/>

    </LinearLayout>
    <include layout="@layout/loading_view"/>

</RelativeLayout>
