<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login_2"
    tools:context="nhannt.foody.screen.register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent_bg_login"
        android:orientation="vertical"
        android:paddingTop="@dimen/register_padding_top"
        android:paddingLeft="@dimen/login_padding"
        android:paddingRight="@dimen/login_padding">

        <ImageView
            android:layout_width="@dimen/login_logo_witdh"
            android:layout_height="@dimen/login_logo_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/login_logo_margin_top"
            android:src="@drawable/foodytext"/>

        <EditText
            android:id="@+id/edt_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_edt_margin_top"
            android:backgroundTint="@color/color_white"
            android:drawableLeft="@drawable/ic_perm_identity_white_24dp"
            android:drawablePadding="@dimen/login_drawable_padding"
            android:hint="@string/email_login"
            android:inputType="textEmailAddress"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_white"/>
        <EditText
            android:id="@+id/edt_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_edt_margin_top"
            android:backgroundTint="@color/color_white"
            android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
            android:drawablePadding="@dimen/login_drawable_padding"
            android:hint="@string/password_login"
            android:inputType="textPassword"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_white"/>
        <EditText
            android:id="@+id/edt_re_password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_edt_margin_top"
            android:backgroundTint="@color/color_white"
            android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
            android:drawablePadding="@dimen/login_drawable_padding"
            android:hint="@string/retype_password"
            android:inputType="textPassword"
            android:textColor="@color/color_white"
            android:textColorHint="@color/color_white"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/btn_login_margin_top"
            android:background="@drawable/btn_login"
            android:paddingLeft="@dimen/btn_login_padding_left_right"
            android:paddingRight="@dimen/btn_login_padding_left_right"
            android:text="@string/register"
            android:textColor="@color/color_white"/>


    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rl_loading_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/transparent_bg_login">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</RelativeLayout>
